<resources>
    <string name="app_name">registration</string>
    <string name="registration_form">Registration Form</string>
    <string name="name">Name</string>
    <string name="father_name">Father Name</string>
    <string name="enter_your_city">Enter Your City</string>
    <string name="submit">Submit</string>
    <string name="textview">TextView</string>
    <string name="your_details">Your Details</string>
</resources>